--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <script src="main.js"></script>
   <script src="jscolor.js"></script>
 
-
-<img src="" id="imgselector">
+<a href="" download id="imgdownloader">
+  <img src="" id="imgselector">
+</a>
 <br>
 <input id="text" placeholder="What do you want to say?" style="font-size: 20px;width: 20%;position: absolute;">
 <br>
