--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Text Color: <input class="jscolor" onchange="textColor = this.jscolor; printText
 <h1>Some fonts</h1>
 <ul>
 <li><b>Futura Round SH-Regular - </b>3b313f1a50677b3ab676b9384f253b4e</li>
+<li><b>Loew Heavy - </b>cd56ff14745b621719c9e2c2a340927f</li>
 <li><b>Neue Helvetica Pro 35 Thin - </b>1f0ededb8b0f17babb11984322e493a6</li>
 <li><b>Neue Helvetica Pro 75 Bold Outline - </b>abee07e3ffec0222303d21d2eb406765</li>
 <li><b>Comic Sans - </b>01f8768e071049be489c6307d1a4bfff</li>
