--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <script src="main.js"></script>
     <script src="jscolor.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3403130116309428",
+        enable_page_level_ads: true
+    });
+    </script>
 </head>
 
 <body>
